--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,8 +1,10 @@
-client_id = "04d5f115df0f3d42a6a4a17ca7c17f59"
+# Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
+
+client_id = "87b98e49c73f16afaf54c265afaf7ade"
 application_url = "https://qr-code-1-nine.vercel.app"
 embedded = true
-name = "qr-app"
-handle = "qr-app-144"
+name = "qr-code"
+handle = "qr-code-416"
 
 [build]
 include_config_on_deploy = true
@@ -12,7 +14,8 @@ dev_store_url = "amogademo.myshopify.com"
 api_version = "2025-01"
 
 [access_scopes]
-scopes = "write_products,write_orders,write_customers"
+# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
+scopes = "write_products"
 
 [auth]
 redirect_urls = [
