--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "private": true,
   "scripts": {
-    "build": "NODE_ENV=production prisma generate && remix build",
+    "build": "cross-env NODE_ENV=production prisma generate && remix build",
     "predev": "prisma generate && prisma migrate deploy",
     "dev": "shopify app dev",
     "config:link": "shopify app config link",
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.0",
+    "@remix-run/netlify": "^1.19.3",
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
     "@remix-run/serve": "^1.19.1",
@@ -30,7 +31,6 @@
     "@shopify/shopify-api": "^9.0.2",
     "@shopify/shopify-app-remix": "^2.4.0",
     "@shopify/shopify-app-session-storage-prisma": "^3.0.0",
-    "cross-env": "^7.0.3",
     "isbot": "^4.1.0",
     "prisma": "^5.8.0",
     "qrcode": "^1.5.3",
@@ -43,6 +43,7 @@
     "@remix-run/eslint-config": "^1.19.1",
     "@types/eslint": "^8.40.0",
     "@types/qrcode": "^1.5.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8"
